# core/models/volumes.go
@@ -3,15 +3,11 @@ package models
 // Volume represents a volume to be attached to a microvm machine.
 type Volume struct {
 	// ID is the uinique identifier of the volume.
-	ID string `json:"id"`
+	ID string `json:"id" validate="required"`
 	// IsReadOnly specifies that the volume is to be mounted readonly.
 	IsReadOnly bool `json:"is_read_only,omitempty"`
 	// Source is where the volume will be sourced from.
-	Source VolumeSource `json:"source"`
-	// PartitionID is the uuid of the boot partition.
-	PartitionID string `json:"partition_id,omitempty"`
-	// Size is the size to resize this volume to.
-	Size int32 `json:"size,omitempty"`
+	Source VolumeSource `json:"source" validate:"required"`
 }
 
 // Volumes represents a collection of volumes.
@@ -32,12 +28,20 @@ func (v Volumes) GetByID(id string) *Volume {
 type VolumeSource struct {
 	// Container is used to specify a source of a volume as a OCI container.
 	Container *ContainerVolumeSource `json:"container,omitempty"`
+	// HostPath is a volume source that comes from a file on the host machine.
+	HostPath *HostPathVolumeSource `json:"hostPath, omitempty"`
 }
 
 // ContainerDriveSource represents the details of a volume coming from a OCI image.
 type ContainerVolumeSource struct {
 	// Image is the OCI image to use.
 	Image ContainerImage `json:"image"`
+}
+
+// HostPathVolumeSource represents a file living on the host.
+type HostPathVolumeSource struct {
+	// Path is the path to file.
+	Path string `json:"path"`
 }
 
 // Mount represents a volume mount point.
